# google-news-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/google_news_mcp/: __init__.py  server.py
